# termin-monitor

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: eventhandler.rs  main.rs  watcher.rs
