[package]
name = "termin-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
poise = "0.6.1"
reqwest = {version = "0.12.5", features = ["json"]}
serde = "1.0.204"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal" ]}

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "model", "utils", "collector", "framework", "cache", "temp_cache"]
version = "0.12.0"
